--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -35,6 +35,7 @@ textarea {
 
 .row {
   white-space: pre-wrap;
+  color: #000000;
   height: 80px;
   border-top: 1px solid white;;
 }
@@ -47,17 +48,17 @@ textarea {
 
 .past {
   background-color: #d3d3d3;
-  color: white;
+  color: #000000;
 }
 
 .present {
-  background-color: #ff6961;
-  color: white;
+  background-color: #ff61e5;
+  color: #000000;
 }
 
 .future {
   background-color: #77dd77;
-  color: white;
+  color: #000000;
 }
 
 .saveBtn {
